--- a/guitar neck.html
+++ b/guitar neck.html
@@ -3,15 +3,15 @@
 	<head>
 		<meta charset="utf-8" />
 		<Title>Guitar Neck</Title>
-		<script src = 'libraries/p5.js'></script>
-		<script src = 'libraries/p5.dom.js'></script>	
-		<script src = 'js/string.js'></script>
-		<script src = 'js/fret.js'></script>
-		<script src = 'js/neck.js'></script>
-		<script src = 'js/dat.json'></script>
-		<script src = 'js/guitar neck.js'></script>
-		<script src = 'js/chord box.js'></script>
-		<script src = 'js/global.js'></script>	
+		<script src = 'https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/p5.min.js'></script>
+		<script src = 'https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/addons/p5.dom.min.js'></script>	
+		<script src = 'string.js'></script>
+		<script src = 'fret.js'></script>
+		<script src = 'neck.js'></script>
+		<script src = 'dat.json'></script>
+		<script src = 'guitar neck.js'></script>
+		<script src = 'chord box.js'></script>
+		<script src = 'global.js'></script>	
 		<link rel="stylesheet" href="guitar neck.css">
 		</head>
 
