--- a/guitar neck.html
+++ b/guitar neck.html
@@ -5,14 +5,14 @@
 		<Title>Guitar Neck</Title>
 		<script src = 'https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/p5.min.js'></script>
 		<script src = 'https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/addons/p5.dom.min.js'></script>	
-		<script src = 'string.js'></script>
-		<script src = 'fret.js'></script>
-		<script src = 'neck.js'></script>
-		<script src = 'dat.json'></script>
-		<script src = 'guitar neck.js'></script>
-		<script src = 'chord box.js'></script>
-		<script src = 'global.js'></script>	
-		<link rel="stylesheet" href="guitar neck.css">
+		<script src = 'https://github.com/gumbilicious/guitar-neck/blob/master/string.js'></script>
+		<script src = 'https://github.com/gumbilicious/guitar-neck/blob/master/fret.js'></script>
+		<script src = 'https://github.com/gumbilicious/guitar-neck/blob/master/neck.js'></script>
+		<script src = 'https://github.com/gumbilicious/guitar-neck/blob/master/dat.json'></script>
+		<script src = 'https://github.com/gumbilicious/guitar-neck/blob/master/guitar neck.js'></script>
+		<script src = 'https://github.com/gumbilicious/guitar-neck/blob/master/chord box.js'></script>
+		<script src = 'https://github.com/gumbilicious/guitar-neck/blob/master/global.js'></script>	
+		<link rel="stylesheet" href="https://github.com/gumbilicious/guitar-neck/blob/master/guitar neck.css">
 		</head>
 
 	<body onLoad = "printCanvas()">
