--- a/guitar neck.html
+++ b/guitar neck.html
@@ -5,14 +5,14 @@
 		<Title>Guitar Neck</Title>
 		<script src = 'https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/p5.min.js'></script>
 		<script src = 'https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/addons/p5.dom.min.js'></script>	
-		<script src = 'https://raw.githubusercontent.com/gumbilicious/guitar-neck/master/string.js'></script>
-		<script src = 'https://raw.githubusercontent.com/gumbilicious/guitar-neck/master/fret.js'></script>
-		<script src = 'https://raw.githubusercontent.com/gumbilicious/guitar-neck/master/neck.js'></script>
-		<script src = 'https://raw.githubusercontent.com/gumbilicious/guitar-neck/master/dat.json'></script>
-		<script src = 'https://raw.githubusercontent.com/gumbilicious/guitar-neck/master/guitar%20neck.js'></script>
-		<script src = 'https://raw.githubusercontent.com/gumbilicious/guitar-neck/master/chord%20box.js'></script>
-		<script src = 'https://raw.githubusercontent.com/gumbilicious/guitar-neck/master/global.js'></script>	
-		<link rel="stylesheet" href="https://raw.githubusercontent.com/gumbilicious/guitar-neck/master/guitar%20neck.css">
+		<script src = 'https://github.com/gumbilicious/guitar-neck/commits/af2bb6ade71d6c9771f955bfdfe6a78cb23426a1/string.js'></script>
+		<script src = 'https://github.com/gumbilicious/guitar-neck/commits/af2bb6ade71d6c9771f955bfdfe6a78cb23426a1/fret.js'></script>
+		<script src = 'https://github.com/gumbilicious/guitar-neck/commits/af2bb6ade71d6c9771f955bfdfe6a78cb23426a1/neck.js'></script>
+		<script src = 'https://github.com/gumbilicious/guitar-neck/commits/af2bb6ade71d6c9771f955bfdfe6a78cb23426a1/dat.json'></script>
+		<script src = 'https://github.com/gumbilicious/guitar-neck/commits/af2bb6ade71d6c9771f955bfdfe6a78cb23426a1/guitar%20neck.js'></script>
+		<script src = 'https://github.com/gumbilicious/guitar-neck/commits/af2bb6ade71d6c9771f955bfdfe6a78cb23426a1/chord%20box.js'></script>
+		<script src = 'https://github.com/gumbilicious/guitar-neck/commits/af2bb6ade71d6c9771f955bfdfe6a78cb23426a1/global.js'></script>	
+		<link rel="stylesheet" href="https://github.com/gumbilicious/guitar-neck/commits/af2bb6ade71d6c9771f955bfdfe6a78cb23426a1/guitar%20neck.css">
 		</head>
 
 	<body onLoad = "printCanvas()">
